<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffd400"
    tools:context="comtamuka120.httpsgithub.final_project.registration">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/yellow_logo_description"
        app:srcCompat="@drawable/yellow_logo" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_below="@+id/editText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="95dp"
        app:cardBackgroundColor="@color/cardview_dark_background"
        app:cardCornerRadius="16dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/register_account_text"
            android:textSize="24sp" />
    </android.support.v7.widget.CardView>

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editText7"
        android:layout_below="@+id/editText2"
        android:layout_marginTop="46dp"
        android:background="#11000000"
        android:drawableStart="@drawable/ic_action_lock"
        android:ems="10"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:textColorHint="#000" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="9dp"
        android:background="#11000000"
        android:drawableStart="@drawable/ic_action_person"
        android:ems="10"
        android:hint="@string/enter_email"
        android:inputType="textPersonName"
        android:textColorHint="#000" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:background="#11000000"
        android:drawableStart="@drawable/ic_action_date"
        android:ems="10"
        android:hint="@string/birthday"
        android:inputType="date"
        android:textColorHint="#000" />
</RelativeLayout>
